--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "moment": "^2.29.4",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
