--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "devextreme-vue": "^22.2.5",
     "moment": "^2.29.4",
     "vue": "^3.2.13",
+    "vue-columns-resizable": "^0.0.1",
+    "vue-draggable-next": "^2.1.1",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vuedraggable": "^2.24.3"
