--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-draggable-next": "^2.1.1",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "vuejs-paginate-next": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
