--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "devextreme": "^22.2.5",
     "devextreme-vue": "^22.2.5",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "vue": "^3.2.13",
     "vue-columns-resizable": "^0.0.1",
