--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.4",
     "vue": "^3.2.13",
     "vue-columns-resizable": "^0.0.1",
+    "vue-currency-filter": "^5.2.0",
     "vue-draggable-next": "^2.1.1",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
