--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devextreme-vue": "^22.2.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "uuid": "^9.0.0",
     "vue": "^3.2.13",
     "vue-columns-resizable": "^0.0.1",
     "vue-currency-filter": "^5.2.0",
